prototype chrome extension

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html>
 <head>
-  <title>Password Sharer</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/base.css">
+  <title>Password Share</title>
 </head>
 <body>
-Hello World
+  <div class="group-name-container">
+    FRIENDS
+  </div>
+  <hr>
+    <a href="https://www.netflix.com/Login?locale=en-US">Netflix</a>
+    <a href="https://secure.hulu.com/account/signin">Hulu</a>
+    <a href="https://id.wsj.com/access/pages/wsj/us/signin.html?url=http%3A%2F%2Fwww.wsj.com&mg=id-wsj">WSJ</a>
+
+
+  <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
-
